tests/snapshots/snapshot_fixtures__fixtures__elifdef.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures/elifdef.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[10] = "%d %d %d\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "elifdef_value", align 4
    %2 = alloca s32i, "elifndef_value", align 4
    %3 = alloca s32i, "inactive_value", align 4
    %4 = const 0 : s32i
    store %4, %0
    %5 = const 0 : s32i
    store %5, %1, align 4
    %6 = const 0 : s32i
    store %6, %2, align 4
    %7 = const 0 : s32i
    store %7, %3, align 4
    %8 = const 23 : s32i
    store %8, %1, align 4
    %9 = const 29 : s32i
    store %9, %2, align 4
    %10 = const 31 : s32i
    store %10, %3, align 4
    %11 = get_global @printf : ((s8i*, ...) -> s32i)*
    %12 = get_global @.str : s8i[10]*
    %13 = cast(array_to_ptrdecay) %12 : s8i*
    %14 = load %1 : s32i, align 4
    %15 = load %2 : s32i, align 4
    %16 = load %3 : s32i, align 4
    %17 = call @printf(%13, %14, %15, %16) : s32i [all]
    %18 = const 0 : s32i
    store %18, %0
    %19 = load %0 : s32i
    return %19
}
