tests/snapshots/snapshot_fixtures__fixtures__enum_return_type_function_pointer_field.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures/enum_return_type_function_pointer_field.c" (c, x86_64-unknown-linux-gnu)
global lastCode : s32i = -1 [internal, default, align 4, dso_local]
global .str : s8i[7] = "%d %d\n" [cir_private, default, align 1, dso_local, constant]

fn succeed(%arg1: s32i) -> u32i [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg1: s32i):
        %37 = alloca s32i, "x", align 4
        %38 = alloca u32i, "__retval", align 4
        store %arg1, %37
        %39 = load %37 : s32i, align 4
        %40 = const 100 : s32i
        %41 = add %39, %40 : s32i [nsw]
        %42 = get_global @lastCode : s32i*
        store %41, %42, align 4
        %43 = const 0 : u32i
        store %43, %38
        %44 = load %38 : u32i
        return %44
}
fn fail(%arg0: s32i) -> u32i [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %29 = alloca s32i, "x", align 4
        %30 = alloca u32i, "__retval", align 4
        store %arg0, %29
        %31 = load %29 : s32i, align 4
        %32 = const 200 : s32i
        %33 = add %31, %32 : s32i [nsw]
        %34 = get_global @lastCode : s32i*
        store %33, %34, align 4
        %35 = const 1 : u32i
        store %35, %30
        %36 = load %30 : u32i
        return %36
}
fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca rec_Dispatcher, "d", align 8
    %2 = alloca s32i, "a", align 4
    %3 = alloca s32i, "b", align 4
    %4 = const 0 : s32i
    store %4, %0
    %5 = get_global @succeed : ((s32i) -> u32i)*
    %6 = get_member %1[0] "run" : ((s32i) -> u32i)**
    store %5, %6, align 8
    %7 = get_member %1[0] "run" : ((s32i) -> u32i)**
    %8 = load %7 : ((s32i) -> u32i)*, align 8
    %9 = const 1 : s32i
    %10 = call %8(%9) : u32i [all]
    %11 = get_global @lastCode : s32i*
    %12 = load %11 : s32i, align 4
    store %12, %2, align 4
    %13 = get_global @fail : ((s32i) -> u32i)*
    %14 = get_member %1[0] "run" : ((s32i) -> u32i)**
    store %13, %14, align 8
    %15 = get_member %1[0] "run" : ((s32i) -> u32i)**
    %16 = load %15 : ((s32i) -> u32i)*, align 8
    %17 = const 2 : s32i
    %18 = call %16(%17) : u32i [all]
    %19 = get_global @lastCode : s32i*
    %20 = load %19 : s32i, align 4
    store %20, %3, align 4
    %21 = get_global @printf : ((s8i*, ...) -> s32i)*
    %22 = get_global @.str : s8i[7]*
    %23 = cast(array_to_ptrdecay) %22 : s8i*
    %24 = load %2 : s32i, align 4
    %25 = load %3 : s32i, align 4
    %26 = call @printf(%23, %24, %25) : s32i [all]
    %27 = const 0 : s32i
    store %27, %0
    %28 = load %0 : s32i
    return %28
}
